--- a/backend/ms-autenticacao/src/main/resources/application.properties
+++ b/backend/ms-autenticacao/src/main/resources/application.properties
@@ -10,3 +10,15 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} -
 # Configuração para endpoints do Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+# db
+spring.application.name=ms-autenticacao
+spring.datasource.url=jdbc:postgresql://localhost:5432/ms_autenticacao
+spring.datasource.username=dac
+spring.datasource.password=123
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# coloque update se quiser atualizar o banco, create para criar, etc
+spring.jpa.hibernate.ddl-auto=create
+# para ligar e desligar a inicialização automática do banco de dados
+spring.jpa.generate-ddl=false
