--- a/backend/ms-autenticacao/src/main/resources/application.properties
+++ b/backend/ms-autenticacao/src/main/resources/application.properties
@@ -19,6 +19,10 @@ spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # coloque update se quiser atualizar o banco, create para criar, etc
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 # para ligar e desligar a inicialização automática do banco de dados
 spring.jpa.generate-ddl=false
+
+#jwt
+jwt.secret=minhaChaveSecretaSuperSeguraParaJWT2025HospitalSystem
+jwt.expiration=86400000
