--- a/backend/ms-autenticacao/src/main/resources/application.properties
+++ b/backend/ms-autenticacao/src/main/resources/application.properties
@@ -19,10 +19,17 @@ spring.datasource.password=123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # coloque update se quiser atualizar o banco, create para criar, etc
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 # para ligar e desligar a inicialização automática do banco de dados
-spring.jpa.generate-ddl=false
+spring.jpa.generate-ddl=true
 
 #jwt
 jwt.secret=minhaChaveSecretaSuperSeguraParaJWT2025HospitalSystem
 jwt.expiration=86400000
+
+#redis
+# Configurações do Redis para blacklist de JWT
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+# spring.data.redis.password=
+# spring.data.redis.database=0 # Opcional, se usar múltiplos bancos no Redis
