dockerizado e criado testes

--- a/backend/ms-autenticacao/src/main/resources/application.properties
+++ b/backend/ms-autenticacao/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configurações do servidor
-server.port=8081
+server.port=8080
 spring.application.name=ms-autenticacao
 
 # Configurações de logging
@@ -22,6 +22,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 # para ligar e desligar a inicialização automática do banco de dados
 spring.jpa.generate-ddl=true
+spring.sql.init.mode=always
 
 #jwt
 jwt.secret=minhaChaveSecretaSuperSeguraParaJWT2025HospitalSystem
