cria autocadastro para funcionario no ms-autenticacao

--- a/backend/ms-autenticacao/src/main/resources/application.properties
+++ b/backend/ms-autenticacao/src/main/resources/application.properties
@@ -23,11 +23,10 @@ spring.jpa.hibernate.ddl-auto=create
 # para ligar e desligar a inicialização automática do banco de dados
 spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
-
+spring.jpa.defer-datasource-initialization=true
 #jwt
 jwt.secret=minhaChaveSecretaSuperSeguraParaJWT2025HospitalSystem
 jwt.expiration=86400000
-
 #redis
 # Configurações do Redis para blacklist de JWT
 spring.data.redis.host=localhost
