faz o autocastro de paciente e o envio da senha por email

--- a/backend/ms-autenticacao/src/main/resources/application.properties
+++ b/backend/ms-autenticacao/src/main/resources/application.properties
@@ -33,3 +33,28 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 # spring.data.redis.password=
 # spring.data.redis.database=0 # Opcional, se usar múltiplos bancos no Redis
+
+# Configurações de E-mail
+app.email.enabled=true
+app.email.from=noreply@hospital.ufpr.br
+app.email.hospital.name=Sistema Hospitalar UFPR
+app.email.support.email=suporte@hospital.ufpr.br
+app.email.support.phone=(41) 3310-2600
+
+# Configuração de processamento assíncrono
+spring.task.execution.pool.core-size=2
+spring.task.execution.pool.max-size=5
+spring.task.execution.pool.queue-capacity=100
+spring.task.execution.thread-name-prefix=email-task-
+
+# Configuração de retry para emails
+spring.retry.enabled=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=h66045121@gmail.com
+spring.mail.password=vtsq mqav ipvg hnuz 
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
