--- a/api-gateway/Dockerfile
+++ b/api-gateway/Dockerfile
@@ -1,36 +1,25 @@
-# Multi-stage build for production optimization
-FROM node:18-alpine AS builder
+# Use Node.js 20 Alpine for smaller image size
+FROM node:20-alpine
 
 # Set working directory
 WORKDIR /app
 
-# Copy package files
+# Copy package files first for better caching
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci --only=production && npm cache clean --force
-
-# Production stage
-FROM node:18-alpine AS production
-
-# Create app directory
-WORKDIR /app
-
-# Create non-root user
-RUN addgroup -g 1001 -S nodejs && \
-    adduser -S api-gateway -u 1001
-
-# Copy dependencies from builder stage
-COPY --from=builder /app/node_modules ./node_modules
+RUN npm ci --only=production
 
 # Copy application code
-COPY --chown=api-gateway:nodejs . .
+COPY . .
 
-# Remove unnecessary files
-RUN rm -rf .git .gitignore README.md .env.example
+# Create non-root user for security
+RUN addgroup -g 1001 -S nodejs
+RUN adduser -S gateway -u 1001
 
-# Switch to non-root user
-USER api-gateway
+# Change ownership of the app directory
+RUN chown -R gateway:nodejs /app
+USER gateway
 
 # Expose port
 EXPOSE 3000
@@ -40,4 +29,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD node -e "require('http').get('http://localhost:3000/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1) })"
 
 # Start the application
-CMD ["node", "src/app.js"]
+CMD ["npm", "start"]
