--- a/backend/ms-autenticacao/src/main/resources/application.properties
+++ b/backend/ms-autenticacao/src/main/resources/application.properties
@@ -12,14 +12,14 @@ management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
 # db
-spring.application.name=ms-autenticacao
-spring.datasource.url=jdbc:postgresql://localhost:5432/ms_autenticacao
-spring.datasource.username=dac
-spring.datasource.password=123
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/ms_autenticacao}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:dac}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:123}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # coloque update se quiser atualizar o banco, create para criar, etc
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.defer-datasource-initialization=true
 # para ligar e desligar a inicialização automática do banco de dados
 spring.jpa.generate-ddl=true
 spring.sql.init.mode=always
