--- a/backend/ms-paciente/src/main/resources/application.properties
+++ b/backend/ms-paciente/src/main/resources/application.properties
@@ -15,3 +15,13 @@ logging.level.br.edu.ufpr.hospital.consulta=DEBUG
 # Configuração para endpoints do Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+# ViaCEP API Configuration
+viacep.base-url=https://viacep.com.br/ws/
+
+# ... outras configs
+jwt.secret=minhaChaveSecretaSuperSeguraParaJWT2025HospitalSystem
+
+# Segurança OAuth2 com JWT
+spring.security.oauth2.resourceserver.jwt.secret-key=minhaChaveSecretaSuperSeguraParaJWT2025HospitalSystem
+
