--- a/api-gateway/.env.example
+++ b/api-gateway/.env.example
@@ -6,10 +6,23 @@ NODE_ENV=development
 JWT_SECRET=minhaChaveSecretaSuperSeguraParaJWT2025HospitalSystem
 JWT_EXPIRATION=86400000
 
-# Microservices URLs
+# Microservices URLs (Docker)
 MS_AUTENTICACAO_URL=http://ms-autenticacao:8080
-MS_PACIENTE_URL=http://ms-paciente:8080
+MS_PACIENTE_URL=http://ms-paciente:8083
 MS_CONSULTA_URL=http://ms-consulta:8080
+
+# Microservices URLs (Local Development)
+# MS_AUTENTICACAO_URL=http://localhost:8081
+# MS_PACIENTE_URL=http://localhost:8083
+# MS_CONSULTA_URL=http://localhost:8080
+
+# Redis Configuration
+REDIS_URL=redis://redis-server:6379
+# REDIS_URL=redis://localhost:6379  # For local development
+
+# Email Configuration (for MS Autenticacao)
+EMAIL_USERNAME=your-email@gmail.com
+EMAIL_PASSWORD=your-app-password
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
