--- a/backend/ms-autenticacao/src/main/resources/application.properties
+++ b/backend/ms-autenticacao/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configurações do servidor
-server.port=8080
+server.port=8081
 spring.application.name=ms-autenticacao
 
 # Configurações de logging
@@ -18,12 +18,15 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:123}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # coloque update se quiser atualizar o banco, create para criar, etc
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.defer-datasource-initialization=true
 # para ligar e desligar a inicialização automática do banco de dados
 spring.jpa.generate-ddl=true
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=never
+spring.jpa.defer-datasource-initialization=false
+
+# Allow data initialization in development
+app.data.load-initial=true
 #jwt
 jwt.secret=minhaChaveSecretaSuperSeguraParaJWT2025HospitalSystem
 jwt.expiration=86400000
@@ -53,7 +56,7 @@ spring.retry.enabled=true
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=h66045121@gmail.com
-spring.mail.password=vtsq mqav ipvg hnuz 
+spring.mail.password=yszr oiai hred uifv  
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
