--- a/backend/ms-paciente/pom.xml
+++ b/backend/ms-paciente/pom.xml
@@ -51,7 +51,7 @@
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
-			<scope>annotationProcessor</scope>
+			<optional>true</optional>
 		</dependency>
 
 		<dependency>
@@ -64,10 +64,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-        	<groupId>org.springframework.boot</groupId>
-        	<artifactId>spring-boot-starter-webflux</artifactId>
-    	</dependency>
 
 		<dependency>
             <groupId>com.h2database</groupId>
