--- a/backend/ms-paciente/src/main/resources/application.properties
+++ b/backend/ms-paciente/src/main/resources/application.properties
@@ -5,19 +5,17 @@ spring.application.name=ms-paciente
 spring.datasource.url=jdbc:postgresql://localhost:5432/hospital_paciente
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Configurações de logging
 logging.level.root=INFO
-logging.level.br.edu.ufpr.hospital.consulta=DEBUG
+logging.level.br.edu.ufpr.hospital.paciente=DEBUG
 
 # Configuração para endpoints do Actuator
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
 
-# ViaCEP API Configuration
-viacep.base-url=https://viacep.com.br/ws/
 
 # ... outras configs
 jwt.secret=minhaChaveSecretaSuperSeguraParaJWT2025HospitalSystem
